# ld46

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: debug_red.frag  debug_red.vert  generic.frag  generic.vert  projectile.frag  projectile.vert  rect.frag
cmake/: FindSDL2.cmake
entity_gen/: CMakeLists.txt  Tests.runsettings  common.h  emit_cpp.cpp  emit_cpp.h  entity_gen.vim  entry.cpp  lexer.cpp  lexer.h  mmap.h  mmap_posix.cpp  mmap_win32.cpp  output.h  output_stdio.cpp  p_check.cpp  p_check.h  p_parse.cpp  p_parse.h  parser.cpp  parser.h  stdafx.h  tests.cpp  tests_lexer.cpp  tests_parser.cpp
game/: CMakeLists.txt  animator.cpp  animator.h  chaingunner.animdef  collision.cpp  collision.h  draw_queue.h  enemy.animdef  entry.cpp  game_core.cpp  mechaspirit.h  projectiles.cpp  railgunner.animdef  ranged.animdef  render_queue.h  shaders.cpp  shaders.h  textures.cpp  textures.h  wisp.animdef
game_imsim/: .gitignore  CMakeLists.txt  collision_handling.cpp  common.h  convar.cpp  convar.h  draw_queue.cpp  draw_queue.h  editor.cpp  enemy.animdef  entities.def  entry.cpp  game.cpp  game.h  game_core.cpp  imsim.h  input_manager.cpp  input_manager.h  irenderer.h  main_menu.cpp  path_finding.cpp  path_finding.h  r_gl.cpp  render_queue.h  serialization.cpp  serialization.h  stdafx.h  texture_picker.cpp  texture_picker.h  tools.h
game_mechaspirit/: CMakeLists.txt  common.h  draw_queue.h  game_core.cpp  mechaspirit.h  render_queue.h  stdafx.h
glad/: CMakeLists.txt  glad.c
imgui/: CMakeLists.txt
libgame/: CMakeLists.txt  animator.cpp  collision.cpp  geometry.cpp  stdafx.h  textures.cpp
public/: animator.h  collision.h  entity_gen.h  geometry.h  projectiles.h  serialization_common.h  textures.h
public/glad/: glad.h
public/utils/: gl.h  glres.h  linear_math.h  sdl_helper.h
steamworks/: CMakeLists.txt
tools/: generate_coverage_report.sh
